--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css3-taobao-taoplus",
-  "version": "0.3.0",
+  "version": "1.0.0",
   "description": "CSS3 Taobao Mobile taoplus Style",
   "repository": {
     "type": "git",
@@ -13,8 +13,11 @@
   },
   "homepage": "http://mittya.github.io/css3-taobao-taoplus",
   "devDependencies": {
-    "gulp": "~3.8.6",
-    "gulp-stylus": "~1.0.5",
-    "gulp-coffee": "~2.1.1"
+    "gulp": "^3.8.6",
+    "gulp-stylus": "^1.0.5",
+    "gulp-coffee": "^2.1.1",
+    "gulp-connect": "^2.0.6",
+    "gulp-livereload": "^2.1.1",
+    "gulp-watch": "^1.0.4"
   }
 }
