--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "css3-taobao-taoplus",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "CSS3 Taobao Mobile taoplus Style",
   "repository": {
     "type": "git",
     "url": "https://github.com/mittya/css3-taobao-taoplus.git"
+  },
+  "scripts": {
+    "start": "./node_modules/.bin/gulp"
   },
   "author": "mittya",
   "license": "MIT",
@@ -14,10 +17,11 @@
   "homepage": "http://mittya.github.io/css3-taobao-taoplus",
   "devDependencies": {
     "gulp": "^3.8.6",
-    "gulp-stylus": "^1.0.5",
     "gulp-coffee": "^2.1.1",
     "gulp-connect": "^2.0.6",
     "gulp-livereload": "^2.1.1",
-    "gulp-watch": "^1.0.4"
+    "gulp-stylus": "^1.0.5",
+    "gulp-watch": "^1.0.4",
+    "autoprefixer-stylus": "^0.9.3"
   }
 }
