--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css3-taobao-taoplus",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "CSS3 Taobao Mobile taoplus Style",
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
     "gulp-livereload": "^2.1.1",
     "gulp-stylus": "^1.0.5",
     "gulp-watch": "^1.0.4"
+  },
+  "dependencies": {
+    "fastclick": "^1.0.6"
   }
 }
